Library compilation is independent of clog in general builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ set_target_properties(Node PROPERTIES SOVERSION 1)
 set_target_properties(Node PROPERTIES PUBLIC_HEADER ${Node_HDRS})
 
 target_include_directories(Node PUBLIC include)
-target_link_libraries(Node clog)
+if(ENABLE_CLOG)
+	target_link_libraries(Node clog)
+endif()
 
 include(GNUInstallDirs)
 
