--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ file(GLOB_RECURSE Node_SRCS "src/*.cpp")
 
 configure_file( ${PROJECT_SOURCE_DIR}/config.h.in ${PROJECT_SOURCE_DIR}/config.h)
 
-add_library(Node SHARED ${Node_HDRS} ${Node_SRCS})
+add_library(Node STATIC ${Node_HDRS} ${Node_SRCS})
+if(WIN32)
+	target_link_libraries(Node wsock32 ws2_32)
+endif()
 set_target_properties(Node PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(Node PROPERTIES SOVERSION 1)
 set_target_properties(Node PROPERTIES PUBLIC_HEADER ${Node_HDRS})
