Added proper install in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,9 @@ set_target_properties(Node PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(Node PROPERTIES SOVERSION 1)
 set_target_properties(Node PROPERTIES PUBLIC_HEADER ${Node_HDRS})
 target_include_directories(Node PUBLIC include)
+
+install (TARGETS Node
+	PUBLIC_HEADER DESTINATION include/Node
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+	RUNTIME DESTINATION bin)
